Fix text alignment for anchor tags

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 body {
-  a {
-    align: center;
+    text-align: center;
+}
+
+a {
+    display: inline-block;
 }
